# cloversim_course

./: README.md
1_thesquare/: CMakeLists.txt  README.md  package.xml
2_iseeall/: CMakeLists.txt  README.md  package.xml
2_iseeall/src/cloversim_task/: checker.py  randomization.py  world.py
3_landmid/: CMakeLists.txt  README.md  package.xml
3_landmid/src/cloversim_task/: checker.py  randomization.py  world.py
4_flybyline/: CMakeLists.txt  README.md  package.xml
4_flybyline/src/cloversim_task/: checker.py  randomization.py  world.py
5_posknown/: CMakeLists.txt  README.md  package.xml
5_posknown/src/cloversim_task/: checker.py  randomization.py  world.py
